# libardrone

./: CMakeLists.txt  libardrone.cpp  libardrone.kdev4
.kdev4/: libardrone.kdev4
include/: libardrone.hpp  message_client.hpp  structures.hpp
include/classes/: pid.hpp  pid_rp.hpp  pid_y.hpp  pid_z.hpp  robot_configuration.hpp
include/config/: configuration.hpp
include/message/: message_server.hpp
include/util/: util.hpp
src/: message_client.cpp
src/classes/: pid.cpp  pid_rp.cpp  pid_y.cpp  pid_z.cpp  robot_configuration.cpp
src/util/: util.cpp
